fix logo alignment and placement on small screen

--- a/custom.scss
+++ b/custom.scss
@@ -187,15 +187,6 @@ footer.footer .nav-footer {
     font-weight: 800;
 }
 
-.accordion-body .column {
-    vertical-align: middle;
-    display: table-cell;
-    img {
-        display: block;
-        padding-left: .25em;
-    }
-}
-
 .vu-listing-item .listing-categories {
     display: flex;
     flex-wrap: wrap;
@@ -283,8 +274,11 @@ footer.footer .nav-footer {
     .accordion-button::after {
         background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23764f92' class='bi bi-arrow-right' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8'/></svg>");
     }
+
     .listing-image {
-        max-height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;   
     }
 }
 /* tools, topics and guides listing and accent color */
